<resources>
    <string name="app_name">TripeWise</string>
    <string name="trip_people">&#160;Member : %1$d &#160;Bills : %2$d</string>
    <string name="trip_name"><b>&#160;%1$s</b></string>
    <string name="text_trip_name">Trip Name</string>
    <string name="text_memeber_name">Member Name</string>
    <string name="text_add_people">Add People</string>
    <string name="text_save">Save</string>
    <string name="text_canccel">Cancel</string>
    <string name="text_empty_list">Get some life</string>
    <string name="bill_name">Bill Name</string>
    <string name="date_fromat">DD MMM yyyy</string>
    <string name="time_optional_format">HH:mm (optional)</string>
    <string name="bill_amount">Bill Amount : <b>₹%1$d</b></string>
    <string name="text_bill_paid_buy">Bill Paid by :</string>
    <string name="bill_help_message_1">Select Names</string>
    <string name="bill_help_message_2">People to be included :</string>
    <string name="bill_help_message_3">If none of the people are selected by default all members will be include</string>

    <string name="amount">₹%1$d</string>
    <string name="receive_amount">+₹%1$d</string>
    <string name="send_amount">-₹%1$d</string>
</resources>
